--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,4 +6,24 @@ services:
       - "3000:3000"
     volumes:
       - .:/usr/src/app
-    command: rails s -b 0.0.0.0
+    command: rails s -b 0.0.0.0 && rm -f /usr/src/app/tmp/pids/server.pid
+    env_file:
+      - .env
+    depends_on:
+      - postgres
+
+  postgres:
+    image: postgres:latest
+    container_name: postgres_container
+    environment:
+      POSTGRES_USER: "postgres"
+      POSTGRES_PASSWORD: "postgres"
+      POSTGRES_DB: "weather_forecast_development"
+    ports:
+      - "5432:5432"
+    volumes:
+      - postgres-data:/var/lib/postgresql/data
+
+volumes:
+  postgres-data:
+  bundle-volume:
