--- a/Dockerfile-dev
+++ b/Dockerfile-dev
@@ -5,3 +5,5 @@ WORKDIR /usr/src/app
 COPY . .
 
 RUN bundle install
+
+CMD ["bash", "-c", "rails s -b 0.0.0.0 && rm -rf /usr/src/app/tmp/pids/server.pid"]
